# ros2_kiosk

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/kiosk/lib/kiosk/: kiosk  kiosk_gui  test  test2
install/kiosk/share/kiosk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kiosk/share/kiosk/data/ui/: flavor.ui  info.ui
install/my_custom_interface/include/my_custom_interface/my_custom_interface/action/: calculator.h  calculator.hpp  come.h
install/my_custom_interface/include/my_custom_interface/my_custom_interface/srv/: abc.h  drive.h  (+5 more)
install/my_custom_interface/share/my_custom_interface/: local_setup.sh  package.sh  package.xml
install/my_custom_interface/share/my_custom_interface/cmake/: export_my_custom_interface__rosidl_generator_cExport-noconfig.cmake  export_my_custom_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_my_custom_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  my_custom_interface__rosidl_typesupport_cExport-noconfig.cmake  my_custom_interface__rosidl_typesupport_cExport.cmake  my_custom_interface__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake
install/my_custom_interface/share/my_custom_interface/srv/: COMPLETE_Response.msg  DRIVE.idl  DRIVE_Response.msg  ORDER.idl  ORDERR.idl  ORDERR.srv  ORDERR_Response.msg  ORDER_Request.msg
install/term_project/lib/term_project/: kiosk_action  kiosk_service  machine2  machine3  robot  robot_sub  test
install/term_project/share/term_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/kiosk/: package.xml  setup.py
src/kiosk/data/ui/: info.ui
src/kiosk/kiosk/: final_kiosk.py  kioskGUI.py  real_final.py  receive.py  test2.py
src/my_custom_interface/: CMakeLists.txt
src/my_custom_interface/action/: Cal.action
src/my_custom_interface/srv/: DRIVE.srv  ORDER.srv
src/my_custom_interface/srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_custom_interface/srv/log/: latest_build
src/term_project/: setup.cfg  setup.py
src/term_project/term_project/: kiosk_action.py  machine3.py  robot_sub.py  test_machine3.py
(+69 files in other folders)
